--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Vanilla-js</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -11,8 +12,15 @@
             <input type="text" placeholder="What is your name?">    
         </form>
         <h4 class="js-greetings greetings"></h4>
+        <form class="js-todoForm">
+            <input type="text" placeholder="write a todo">
+        </form>
+        <ul class="js-todoList">
+
+        </ul>
     </div>
     <script src="clock.js"></script>
     <script src="greeting.js" ></script>
+    <script src="todo.js"></script>
 </body>
 </html>
